  overwrite each other's feature forest files. Also, the forest files
  created in tmp are deleted when the Java VM exits. (JMB, 21-JAN-07).

- Separated out the standard sentential parsing features from extra
  features used for discourse parsing. (JMB, 23-MAR-07)

- Created ParserOptions so that it is easier to pass various options
  between the parser and the pipes. (JMB, 23-MAR-07)


-----------------------------------------------------------------------
v0.4.2

- Results have improved slightly over previous testbed results. This
  may be due to the fact that FeatureVector.dotProduct would have got
  -1 return values on keys not held in the TIntDoubleHashMap for the
  second vector in the previous version of Trove. Now that Trove
  returns 0, this is actually the right behavior in this case. Another
  possible explanation is that there is some minor change in the
  features which are generated. Since the output has changed so
  little, and for the better, I'll leave it at that for now. The
  testbed results and output have been updated to reflect the current
  version. (JMB, 17-JAN-07)

- Uncommented a line in DependencyPipe that removed some features from
  the parsing models in the previous release. (Need to come up with a
  better way of defining different pipes!) (JMB, 17-JAN-07)

- Changed the FeatureVector implementation to be a TLinkedList of
  Feature objects, with two optional sub-FeatureVectors contained
  within. This supports fast concatenation of two FeatureVectors since
  it is no longer necessary to copy entire lists. Also, rather than
  explicitly negating features for the getDistVector() method, a
  boolean value is set that can optionally indicate the second
  sub-FeatureVector as negated. The logic of the other methods then
  preserves the negation (and negation with negation). Again, this
  means we don't have to make copies for this operation. These changes
  led sped up training by a factor of 2 to 4 (depedending on the