@@ -12,6 +12,10 @@ v0.4.3
 - Created ParserOptions so that it is easier to pass various options
   between the parser and the pipes. (JMB, 23-MAR-07)
 
+- Fixed bug in serialization of DependencyInstances -- lemmas were not
+  being written out, and this caused the 2nd order stuff to
+  crash. (JMB 23-MAR-07)
+
 
 -----------------------------------------------------------------------
 v0.4.2
